# DeepSeekRAG

./: .gitignore  README.md
chatbot_be/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
chatbot_be/app/: __init__.py
chatbot_be/app/api/: __init__.py  server.py
chatbot_be/app/api/v1/: __init__.py  chat.py  health.py  rag.py  sql.py
chatbot_be/app/core/: __init__.py  config.py  cors.py  exceptions.py
chatbot_be/app/models/: __init__.py  database.py
chatbot_be/app/schemas/: __init__.py  chat.py  common.py  rag.py  session.py  sql.py
chatbot_be/app/services/: __init__.py  conversational_service.py  data_extractor.py  rag_pipeline.py  rag_service.py  sql_client.py  vector_store.py
chatbot_be/app/utils/: __init__.py
chatbot_be/chatbot_be/: db.py  main.py
chatbot_be/chatbot_be/rag/: conversational_service.py  data_extractor.py  llm_client.py  query_router.py  rag_service.py  session_manager.py  sql_client.py
chatbot_be/chatbot_be/routers/: __init__.py  conversational_router.py  customers.py  rag.py  sql.py
chatbot_fe/: README.md  app.py  enhanced_app.py  pyproject.toml  streamlit_chat.py
chatbot_fe/chatbot_fe/: __init__.py
database/: database_setup.sh  docker-compose.yml
