[project]
name = "chatbot_be"
version = "0.1.0"
description = ""
authors = [
    {name = "Veer Thiara",email = "veersingh27@live.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
