[tool.poetry]
name = "chatbot-fe"
version = "0.1.0"
description = "Simple Streamlit frontend for DeepSeek RAG Chatbot"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
streamlit = "^1.49.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"